# jedit

./: com.github.anonneo.jedit.json  meson.build
data/: com.github.anonneo.jedit.appdata.xml.in  com.github.anonneo.jedit.desktop.in  com.github.anonneo.jedit.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: jedit.gresource.xml  main.vala  meson.build  window.ui  window.ui~  window.vala
